--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
             <source src="./media/4K Bokeh Particle Background Free VJ loop - VJ Loops 2020 - Free Motion backgrou.mp4" type="video/mp4">
         </video>
         <nav>
-            <img src="/img/download-removebg-preview.png" alt="logo" class="logo">
+            <img src="./img/download-removebg-preview.png" alt="logo" class="logo">
             <ul class="nav_links">
                 <li><a href="#">Home</a></li>
                 <li><a href="#">Courses</a></li>
