--- a/index.html
+++ b/index.html
@@ -10,7 +10,6 @@
 
 <body>
     <span id="span2" onclick="closenav2()">&#9776;</span>
-
     <div class="header" id="unoder">
 
         <video autoplay loop class="back_video" muted plays-inline>
@@ -24,7 +23,7 @@
                     <li><a href="#">Courses</a></li>
                     <li><a href="#">Reviews</a></li>
                     <li><a href="#">Contact</a></li>
-                    <li class="btn"><a href="#">Sign up</a></li>
+                    <li class="btn">Sign up</li>
                 </ul>
             </nav>
         </div>
@@ -52,10 +51,6 @@
         function closenav2() {
             sohel.style.display = "block"
             sohel.style.transition = "2s"
-        }
-
-        function openav2() {
-            sohel.style.display = "none"
         }
     </script>
 </body>
